tests/bad_programs/type_errors/main_param.notc
int main(double d) {
    return 0;
}
